--- a/DemoApp/index.html
+++ b/DemoApp/index.html
@@ -1,4 +1,4 @@
 <h1>Hello Angular Application server</h1>
 <h4>Try commands</h4>
-<p><b>#$</b>  node app.js 8080 /DemoApp</p>
-<p><b>#$</b>  ./app.js 8080 /DemoApp</p>
+<p><b>#$</b>  angularserver 8080 /home/user/myAngularApp/dist</p>
+<p><b>#$</b>  angularserver 8080 ./dist</p>
